--- a/index.html
+++ b/index.html
@@ -12,35 +12,35 @@
 <body>
     <nav style="background-color: white" class="navbar navbar-expand-lg sticky-top navbar-light">
         <div class="container-fluid">
-          <a class="ms-3 navbar-brand" href="#"><img style="width:80px"src="logo4.png"?><small class="ms-2">Pay</small></a>
+          <a class="ms-3 navbar-brand" href="https://developers.google.com/pay"><img style="width:80px"src="logo4.png"?><small class="ms-2">Pay</small></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class=" ms-3 collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Overview</a>
+                <a class="nav-link active" aria-current="page" href="https://developers.google.com/pay">Overview</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="https://developers.google.com/pay/api" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Payments
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Android</a></li>
-                  <li><a class="dropdown-item" href="#">web</a></li>
+                  <li><a class="dropdown-item" href="https://developers.google.com/pay/api/android/overview">Android</a></li>
+                  <li><a class="dropdown-item" href="https://developers.google.com/pay/api/web/overview">web</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="https://developers.google.com/pay/passes" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Passes
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Boarding passes</a></li>
-                  <li><a class="dropdown-item" href="#">Event tickets</a></li>
-                  <li><a class="dropdown-item" href="#"> Loyalty cards</a></li>
-                  <li><a class="dropdown-item" href="#">Gift cards </a></li>
-                  <li><a class="dropdown-item" href="#">Offers </a></li>
-                  <li><a class="dropdown-item" href="#">Transit passes </a></li>
+                  <li><a class="dropdown-item" href="https://developers.google.com/pay/passes/guides/pass-verticals/use-cases?vertical=boarding-passes">Boarding passes</a></li>
+                  <li><a class="dropdown-item" href="https://developers.google.com/pay/passes/guides/pass-verticals/use-cases?vertical=event-tickets#pass-vertical">Event tickets</a></li>
+                  <li><a class="dropdown-item" href="https://developers.google.com/pay/passes/guides/pass-verticals/use-cases?vertical=loyalty"> Loyalty cards</a></li>
+                  <li><a class="dropdown-item" href="https://developers.google.com/pay/passes/guides/pass-verticals/use-cases?vertical=gift-cards">Gift cards </a></li>
+                  <li><a class="dropdown-item" href="https://developers.google.com/pay/passes/guides/pass-verticals/use-cases?vertical=offers">Offers </a></li>
+                  <li><a class="dropdown-item" href="https://developers.google.com/pay/passes/guides/pass-verticals/use-cases?vertical=transit-passes">Transit passes </a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -48,30 +48,30 @@
                   India
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Android</a></li>
-                  <li><a class="dropdown-item" href="#">iOS</a></li>
-                  <li><a class="dropdown-item" href="#">Web</a></li>
-                  <li><a class="dropdown-item" href="#">Omnichannel</a></li>
-                  <li><a class="dropdown-item" href="#">Merchant SDK</a></li>
-                  <li><a class="dropdown-item" href="#">PSP APIs</a></li>
+                  <li><a class="dropdown-item" href="https://developers.google.com/pay/india/api/android/overview">Android</a></li>
+                  <li><a class="dropdown-item" href="https://developers.google.com/pay/india/api/ios/overview">iOS</a></li>
+                  <li><a class="dropdown-item" href="https://developers.google.com/pay/india/api/web/intro">Web</a></li>
+                  <li><a class="dropdown-item" href="https://developers.google.com/pay/india/api/otherapis/omnichannel/overview">Omnichannel</a></li>
+                  <li><a class="dropdown-item" href="https://developers.google.com/pay/india/api/merchant-sdk/guides/overview">Merchant SDK</a></li>
+                  <li><a class="dropdown-item" href="https://developers.google.com/pay/india/api/psp/overview">PSP APIs</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="https://developers.google.com/pay/transit" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Transit
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Closed loop</a></li>
-                  <li><a class="dropdown-item" href="#">Open loop</a></li>   
-                  <li><a class="dropdown-item" href="#">QR code</a></li>
-                  <li><a class="dropdown-item" href="#">Visual tickets</a></li>
+                  <li><a class="dropdown-item" href="https://developers.google.com/pay/transit/closed-loop/get-started/overview">Closed loop</a></li>
+                  <li><a class="dropdown-item" href="https://developers.google.com/pay/transit/open-loop/get-started/overview">Open loop</a></li>   
+                  <li><a class="dropdown-item" href="https://developers.google.com/pay/transit/qr-code/get-started/overview">QR code</a></li>
+                  <li><a class="dropdown-item" href="https://developers.google.com/pay/transit/visual-tickets/get-started/overview">Visual tickets</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Payment card recognition</a>
+                <a class="nav-link active" aria-current="page" href="https://developers.google.com/pay/payment-card-recognition/debit-credit-card-recognition">Payment card recognition</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Spot Platform</a>
+                <a class="nav-link active" aria-current="page" href="https://developers.google.com/pay/spot">Spot Platform</a>
               </li>
             <div style="margin-left:200px"class="d-flex">
             <form class="d-flex">
@@ -114,33 +114,33 @@
           <p class="ms-3" style="font-size:30px">Google Pay APIs help you build better checkout experiences</p>
           </div>
       </section>
-      <section style="background-color:whitesmoke" class="d-flex p-5">
+      <section style="background-color:whitesmoke" class="d-flex flex-column flex-lg-row p-4">
           <div class="m-auto"style="width:50%">
            <h3>Make payments easy for you and your customers</h3>
            <p>Add Google Pay to your existing payments processing stack to offer simpler, more secure checkout in your apps and websites.</p>
-           <a type="button" class="btn btn-primary mb-2" href="">Learn more</a>
+           <a type="button" class="btn btn-primary mb-2" href="https://developers.google.com/pay/api">Learn more</a>
            <b><p>View developer documentation</p></b>
-           <a type="button" class="btn btn-outline-primary" href="">Android</a>
-           <a type="button" class="btn btn-outline-primary" href="">Web</a>
-           <a type="button" class="btn btn-outline-primary" href="">Transaction Events</a>
+           <a type="button" class="btn btn-outline-primary" href="https://developers.google.com/pay/api/android/overview">Android</a>
+           <a type="button" class="btn btn-outline-primary" href="https://developers.google.com/pay/api/web/overview">Web</a>
+           <a type="button" class="btn btn-outline-primary" href="https://developers.google.com/pay/facilitated-transaction-event-v2">Transaction Events</a>
            <br>
            <br>
-           <p>Plus, check out customized <a href="#">Google Pay APIs for India</a>.</p>
+           <p>Plus, check out customized <a href="https://developers.google.com/pay/india/api">Google Pay APIs for India</a>.</p>
           </div>
           <div>
           <img style="width:100%;height:auto"src="logo1.png"/>
           </div>
       </section>
-      <section style="background-color:whitesmoke;margin-top:100px;height:400px" class="px-5 d-flex">
+      <section style="background-color:whitesmoke;margin-top:100px;height:fit-content" class="px-5 d-flex flex-column flex-lg-row">
         <div>
           <img style="width:100%;height:100%"src="logo2.png"/>
         </div>
-        <div class="m-auto px-5"style="width:50%">
-         <a class="text-decoration-none" href="#"><h3> Engage customers with passes, offers, and rewards</h3></a>
+        <div class="m-auto flex-column flex-lg-row"style="width:50%">
+         <a class="text-decoration-none" href="https://developers.google.com/pay/passes/guides/introduction/about-google-pay-api-for-passes"><h3> Engage customers with passes, offers, and rewards</h3></a>
          <p>Digitize everything from boarding passes to loyalty programs, then engage customers with location-based notifications and real-time updates.</p>
-         <a type="button" class="btn btn-primary mb-2" href="">Learn more</a>
+         <a type="button" class="btn btn-primary mb-2" href="https://developers.google.com/pay/passes">Learn more</a>
          <b><p>View developer documentation</p></b>
-         <a type="button" class="btn btn-outline-primary" href="">Passes</a>
+         <a type="button" class="btn btn-outline-primary" href="https://developers.google.com/pay/passes/guides/introduction/about-google-pay-api-for-passes">Passes</a>
         </div>
     </section>
     <section class="mt-5 text-center">
@@ -150,70 +150,61 @@
     <section class="bg-primary text-light text-center p-4">
       <p style="font-size:30px">Get the latest news</p>
       <p>tay up to date on Google Pay news, products, and events.</p>
-      <a type="button" class="btn btn-light text-primary" href="#">Follow us on twitter</a>
+      <a type="button" class="btn btn-light text-primary" href="https://twitter.com/GooglePayDevs">Follow us on twitter</a>
     </section>
     <section class="mt-5">
-      <div class="d-flex justify-content-around">
+      <div class="d-flex flex-column flex-lg-row justify-content-around">
         <div class="abc">
             <b><p>Connect</p></b>
-            <a class=" d-block" href="#">Blog</a>
-            <a class=" d-block" href="#">Facebook</a>
-            <a class=" d-block" href="#">Medium</a>
-            <a class=" d-block" href="#">Twitter</a>
-            <a class=" d-block" href="#">YouTube</a>
+            <a class=" d-block" href="https://developers.googleblog.com/">Blog</a>
+            <a class=" d-block" href="https://www.facebook.com/googledevelopers/">Facebook</a>
+            <a class=" d-block" href="https://medium.com/google-developers">Medium</a>
+            <a class=" d-block" href="https://twitter.com/googledevs">Twitter</a>
+            <a class=" d-block" href="https://www.youtube.com/user/GoogleDevelopers">YouTube</a>
         </div>
         <div class="abc">
           <b><p>Programs</p></b>
-          <a class=" d-block" href="#">Women Techmakers</a>
-          <a class=" d-block" href="#">Google Developer Groups</a>
-          <a class=" d-block" href="#">Google Developers Experts</a>
-          <a class=" d-block" href="#">Accelerators</a>
-          <a class=" d-block" href="#">Google Developer Student Clubs</a>
+          <a class=" d-block" href="https://www.womentechmakers.com/">Women Techmakers</a>
+          <a class=" d-block" href="https://developers.google.com/community/gdg">Google Developer Groups</a>
+          <a class=" d-block" href="https://developers.google.com/community/experts">Google Developers Experts</a>
+          <a class=" d-block" href="https://developers.google.com/community/accelerators">Accelerators</a>
+          <a class=" d-block" href="https://developers.google.com/community/gdsc">Google Developer Student Clubs</a>
         </div>
         <div class="abc">
           <b><p>Developer consoles</p></b>
-          <a class="d-block"href="#">Google API Console</a>
-          <a class="d-block" href="#">Google Cloud Platform Console</a>
-          <a class="d-block" href="#">Google Play Console</a>
-          <a class="d-block" href="#">Firebase Console</a>
-          <a class="d-block" href="#">Actions on Google Console</a>
-          <a class="d-block" href="#">Cast SDK Developer Console</a>
-          <a class="d-block" href="#">Chrome Web Store Dashboard</a>
+          <a class="d-block"href="https://console.cloud.google.com/apis/dashboard">Google API Console</a>
+          <a class="d-block" href="https://console.cloud.google.com/getting-started">Google Cloud Platform Console</a>
+          <a class="d-block" href="https://play.google.com/console/u/0/signup">Google Play Console</a>
+          <a class="d-block" href="https://console.firebase.google.com/">Firebase Console</a>
+          <a class="d-block" href="https://console.actions.google.com/">Actions on Google Console</a>
+          <a class="d-block" href="https://cast.google.com/publish/#/signup">Cast SDK Developer Console</a>
+          <a class="d-block" href="https://accounts.google.com/">Chrome Web Store Dashboard</a>
         </div> 
       </div>
     </section>
     <section>
-      <div class="d-flex border-top border-bottom border-dark mt-5 py-3">
+      <div class="d-flex flex-column flex-lg-row  border-top border-bottom border-dark mt-5 py-3">
         <img class="ms-5"style="width:20%;height:auto"src="lockup-developers.svg"/>
         <div class="xyz">
-        <a href="#">Android </a>
-        <a href="#">Chrome</a>
-        <a href="#">Firebase</a>
-        <a href="#">Google Cloud Platform</a>
-        <a href="#">All products</a>
+        <a href="https://developer.android.com/">Android </a>
+        <a href="https://developer.chrome.com/">Chrome</a>
+        <a href="https://firebase.google.com/">Firebase</a>
+        <a href="https://cloud.google.com/">Google Cloud Platform</a>
+        <a href="https://developers.google.com/products">All products</a>
         </div>
       </div>
     </section>
-     <div class="d-flex justify-content-between mt-2 p-4">
+     <div class="d-flex flex-column flex-lg-row  justify-content-between mt-2 p-4">
       <div class="ms-4">
-      <a class="text-decoration-none" href="#">Terms</a>
+      <a class="text-decoration-none" href="https://developers.google.com/terms/site-terms">Terms</a>
       <small>|</small>
-      <a class="text-decoration-none" href="#">Policy</a>
+      <a class="text-decoration-none" href="https://policies.google.com/privacy">Policy</a>
       </div>
       <div class="me-4">
        <p class="d-inline">Sign up for the Google Developers newsletter</p>
-       <a type="button" class="btn btn-primary" href="#">Subscribe</a>
+       <a type="button" class="btn btn-primary" href="https://services.google.com/fb/forms/googledevelopersnewsletter/">Subscribe</a>
       </div>
      </div>
-
-
-
-
-
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
